Greatlt simplified Poem button functionality within Javascript by condesing it all into one click event. The UI was not changed, but UX was improved because new timeout variable prevents poem overlap when choosing another poem. The issue that was fixed was that while a previous one is still sliding into view, a different poem could overlap one, showing two entirley different poems at the same time in the same are.

--- a/cssMain.css
+++ b/cssMain.css
@@ -183,7 +183,7 @@ i.hide {
     #CSpoem {
         display: block !important;
     }
-    
+
     #INFpoem {
         display: block !important;
     }
@@ -363,6 +363,10 @@ i.hide {
 #navPoemHead {
     opacity: 0;
     animation: poemHead 400ms ease 500ms 1 normal forwards;
+}
+
+.poemHolder{
+  opacity: 1;
 }
 
 .poem-item {
